Increase the header height in the variables file in order to prevent a scrollbar on the map page.
This value can always be overwritten by setting it in the `CSS & Styles` settings page in the admin

--- a/less/gn_variables_dutch.less
+++ b/less/gn_variables_dutch.less
@@ -73,7 +73,7 @@
 
 // header
 @gn-header-background: #fff;
-@gn-header-height: 72px;
+@gn-header-height: 87px;
 // menu bar
 @gn-menubar-height: 50px;
 @gn-menubar-background: @ro-darkblue-full;
